k8/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test.app.com
    http:
      paths:
      - path: /v1
        backend:
          serviceName: app-blue
          servicePort: 5000
      - path: /v2
        backend:
          serviceName: app-green
          servicePort: 5000
